--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 					<p>Tel: 000-0000-0000</p>
 				</div>
 				<ul class="footer-menu">
+					<li><a href="index.html">トップページ</a></li>
 					<li><a href="#">園について</a></li>
 					<li><a href="#">保育について</a></li>
 					<li><a href="#">入園案内</a></li>
