--- a/index.html
+++ b/index.html
@@ -121,13 +121,45 @@
 				<li class="slider-item"><img src="img/mainvisual-1.jpg" alt="メインビジュアル"></li>
 				<li class="slider-item"><img src="img/mainvisual-2.jpg" alt="メインビジュアル"></li>
 				<li class="slider-item"><img src="img/mainvisual-3.jpg" alt="メインビジュアル"></li>
+				<li class="slider-item"><img src="img/mainvisual-4.jpg" alt="メインビジュアル"></li>
 			</ul>
-			<div class="kisya"><img src="img/mainvisual-kisya.png" alt="汽車"></div>
+			<div class="kisya"><img src="img/mainvisual-img.png" alt="おとこのことおんなのこ"></div>
 		</section>
 		
 		<section id="message">
 			<div class="container">
 				<p>めいめいほいくえんは<br>こどもたちの<br><span>「じぶんでやりたい」</span><br><span>「やってみたい」</span><br>という気持ちを大切にします</p>
+			</div>
+		</section>
+		
+		<section id="link">
+			<div class="container">
+				<ul>
+					<li>
+						<img src="img/link-img.png" alt="男の子">
+						<p class="title">園について</p>
+						<p class="description">園の概要、園の理念、園長先生からのメッセージ</p>
+						<a href="#">詳しく見る</a>
+					</li>
+					<li>
+						<img src="img/link-img.png" alt="男の子">
+						<p class="title">保育について</p>
+						<p class="description">園での一日、年間行事、食育</p>
+						<a href="#">詳しく見る</a>
+					</li>
+					<li>
+						<img src="img/link-img.png" alt="男の子">
+						<p class="title">入園案内</p>
+						<p class="description">園の概要、園の理念、園長先生からのメッセージ</p>
+						<a href="#">詳しく見る</a>
+					</li>
+					<li>
+						<img src="img/link-img.png" alt="男の子">
+						<p class="title">アクセス</p>
+						<p class="description">最寄り駅からのルート、駐車場情報</p>
+						<a href="#">詳しく見る</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 		
