--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>めいめいほいくえん</title>
+	<title>園について - めいめいほいくえん</title>
 	<!-- InstanceEndEditable -->
 	<meta name="Description" content="めいめいほいくえんのサイトです。">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
 <script src="js/jquery-3.7.1.slim.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- InstanceBeginEditable name="head" -->
-	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<link href="css/about.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 <body>
@@ -116,79 +116,58 @@
 	
 	<main>
 		<!-- InstanceBeginEditable name="main" -->
-		<section id="mainvisual">
-			<ul id="slider">
-				<li class="slider-item"><img src="img/mainvisual-1.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-2.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-3.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-4.jpg" alt="メインビジュアル"></li>
-			</ul>
-			<div class="kisya"><img src="img/mainvisual-img.png" alt="おとこのことおんなのこ"></div>
+		<section id="sub-title">
+			<h2 class="page-title">園について</h2>
 		</section>
 		
-		<section id="message">
+		<section id="gaiyou">
 			<div class="container">
-				<p>めいめいほいくえんは<br>こどもたちの<br><span>「じぶんでやりたい」</span><br><span>「やってみたい」</span><br>という気持ちを大切にします</p>
+				<h3 class="sec-title">園の概要</h3>
+				<div class="gaiyou-wrap">
+					<div class="img"><img src="img/gaiyou.jpg" alt="建物"></div>
+					<dl>
+						<dt>名称</dt>
+						<dd>かくうの法人　めいめいほいくえん</dd>
+						<dt>所在地</dt>
+						<dd>兵庫県神戸市○○区〇〇町○○－○○</dd>
+						<dt>児童定員</dt>
+						<dd>〇〇人</dd>
+						<dt>施設種別</dt>
+						<dd>認可保育園</dd>
+						<dt>園長</dt>
+						<dd>〇〇〇〇</dd>
+						<dt>開園時間</dt>
+						<dd>〇〇～〇〇</dd>
+						<dt>入園年齢</dt>
+						<dd>〇歳から</dd>
+					</dl>
+				</div>
+			</div>	
+		</section>
+		
+		<section id="mezasu-hoiku">
+			<div class="container">
+				<h3 class="sec-title">目指す保育</h3>
+				<ol>
+					<li><a href="#">自分で考え、自分で動く子ども</a></li>
+					<li><a href="#">心身ともに元気な子ども</a></li>
+					<li><a href="#">周りの人・ものを大切にする子ども</a></li>
+				</ol>
 			</div>
 		</section>
 		
-		<section id="link">
-			<div class="container">
-				<ul>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">園について</p>
-						<p class="description">園の概要、目指す保育、園長先生からのメッセージ</p>
-						<a href="./about.html">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">保育について</p>
-						<p class="description">園での一日、年間行事、食育</p>
-						<a href="#">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">入園案内</p>
-						<p class="description">説明会情報、募集要項、見学について</p>
-						<a href="#">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">アクセス</p>
-						<p class="description">最寄り駅からのルート、駐車場情報</p>
-						<a href="./access.html">詳しく見る</a>
-					</li>
-				</ul>
-			</div>
-		</section>
 		
-		<section id="news">
+		<section id="encho">
 			<div class="container">
-				<h2>おしらせ</h2>
-				<ul class="news-lists">
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-1.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-2.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-3.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-				</ul>
+				<h3 class="sec-title">園長先生からのメッセージ</h3>
+				<div class="text">
+					<p>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。</p>
+					<p>何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。</p>
+					<p>ただ彼の掌に載せられてスーと持ち上げられた時何だかフワフワした感じがあったばかりである。掌の上で少し落ちついて書生の顔を見たのがいわゆる人間というものの見始であろう。この時妙なものだと思った感じが今でも残っている。第一毛をもって装飾されべきはずの顔がつるつるしてまるで薬缶だ。</p>
+					<p>その後猫にもだいぶ逢ったがこんな片輪には一度も出会わした事がない。</p>
+					<p>のみならず顔の真中があまりに突起している。そうしてその穴の中から時々ぷうぷ</p>
+					<p class="encho-name">〇〇年〇月〇日<br>園長　〇〇〇〇</p>
+				</div>
 			</div>
 		</section>
 		<!-- InstanceEndEditable -->
@@ -215,19 +194,7 @@
 	  </div>
 	
 	</footer>
-<!-- InstanceBeginEditable name="EditRegion4" -->
-	<script>
-		$('#slider').slick({
-			autoplay: true, //自動再生
-			fade: true,    // fedeオン
-			speed: 1500,   // 画像切り替えにかかる時間（ミリ秒）
-			autoplaySpeed: 3000, //自動再生の速度
-			arrows: false, //前へ・次への矢印ナビを表示
-			dots: false, //ドット型のナビを表示
-			infinite: true //無限ループ
-		});
-	</script>	
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- InstanceEndEditable -->
 <script>
 		//ハンバーガーボタン押下
 		$(".openbtn").click(function () {
