--- a/access.html
+++ b/access.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>めいめいほいくえん</title>
+	<title>アクセス - めいめいほいくえん</title>
 	<!-- InstanceEndEditable -->
 	<meta name="Description" content="めいめいほいくえんのサイトです。">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
 <script src="js/jquery-3.7.1.slim.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- InstanceBeginEditable name="head" -->
-	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<link href="css/access.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 <body>
@@ -116,81 +116,28 @@
 	
 	<main>
 		<!-- InstanceBeginEditable name="main" -->
-		<section id="mainvisual">
-			<ul id="slider">
-				<li class="slider-item"><img src="img/mainvisual-1.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-2.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-3.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-4.jpg" alt="メインビジュアル"></li>
-			</ul>
-			<div class="kisya"><img src="img/mainvisual-img.png" alt="おとこのことおんなのこ"></div>
+		<section id="sub-title">
+			<h2 class="page-title">アクセス</h2>
+		</section>
+		<section id="access">
+			<div class="container">
+			
+				<p>〒123-1234<br>兵庫県神戸市○○区〇〇町○○－○○<br>Tel: 000-0000-0000</p>
+
+				<dl>
+					<dt>電車でお越しの場合</dt>
+					<dd>神戸電鉄〇〇線〇〇駅下車<br>東へ徒歩〇〇分</dd>
+					<dt>お車でお越しの場合</dt>
+					<dd>事前にお電話ください。<br>※路上駐車はお控えください</dd>
+				</dl>
+				
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104855.27563407758!2d135.1773938!3d34.78763819999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000628355f67323%3A0x260446e0325dafdf!2z5YW15bqr55yM56We5oi45biC5YyX5Yy6!5e0!3m2!1sja!2sjp!4v1703407713324!5m2!1sja!2sjp" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+			
+			
+
 		</section>
 		
-		<section id="message">
-			<div class="container">
-				<p>めいめいほいくえんは<br>こどもたちの<br><span>「じぶんでやりたい」</span><br><span>「やってみたい」</span><br>という気持ちを大切にします</p>
-			</div>
-		</section>
-		
-		<section id="link">
-			<div class="container">
-				<ul>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">園について</p>
-						<p class="description">園の概要、目指す保育、園長先生からのメッセージ</p>
-						<a href="./about.html">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">保育について</p>
-						<p class="description">園での一日、年間行事、食育</p>
-						<a href="#">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">入園案内</p>
-						<p class="description">説明会情報、募集要項、見学について</p>
-						<a href="#">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">アクセス</p>
-						<p class="description">最寄り駅からのルート、駐車場情報</p>
-						<a href="./access.html">詳しく見る</a>
-					</li>
-				</ul>
-			</div>
-		</section>
-		
-		<section id="news">
-			<div class="container">
-				<h2>おしらせ</h2>
-				<ul class="news-lists">
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-1.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-2.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-3.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</section>
 		<!-- InstanceEndEditable -->
 	</main>
 
@@ -216,18 +163,8 @@
 	
 	</footer>
 <!-- InstanceBeginEditable name="EditRegion4" -->
-	<script>
-		$('#slider').slick({
-			autoplay: true, //自動再生
-			fade: true,    // fedeオン
-			speed: 1500,   // 画像切り替えにかかる時間（ミリ秒）
-			autoplaySpeed: 3000, //自動再生の速度
-			arrows: false, //前へ・次への矢印ナビを表示
-			dots: false, //ドット型のナビを表示
-			infinite: true //無限ループ
-		});
-	</script>	
-<!-- InstanceEndEditable -->
+	
+	<!-- InstanceEndEditable -->
 <script>
 		//ハンバーガーボタン押下
 		$(".openbtn").click(function () {
