--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 	<title>園について - めいめいほいくえん</title>
 	<!-- InstanceEndEditable -->
 	<meta name="Description" content="めいめいほいくえんのサイトです。">
+	<link href="img/icon.ico" rel="icon">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="css/slick.css" rel="stylesheet" type="text/css">
 	<link href="css/slick-theme.css" rel="stylesheet" type="text/css">
@@ -33,7 +34,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="./day.html">
 							<dl>
 								<dt><img src="img/icon-toy.png" alt="保育について"></dt>
 								<dd>保育について</dd>
@@ -57,7 +58,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="./contact.html">
 							<dl>
 								<dt><img src="img/icon-mail.png" alt="お問い合わせ"></dt>
 								<dd>お問い合わせ</dd>
@@ -79,7 +80,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="./day.html">
 						<dl>
 							<dt><img src="img/icon-toy.png" alt="保育について"></dt>
 							<dd>保育について</dd>
@@ -103,7 +104,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="./contact.html">
 						<dl>
 							<dt><img src="img/icon-mail.png" alt="お問い合わせ"></dt>
 							<dd>お問い合わせ</dd>
@@ -184,10 +185,10 @@
 				<ul class="footer-menu">
 					<li><a href="index.html">トップページ</a></li>
 					<li><a href="./about.html">園について</a></li>
-					<li><a href="#">保育について</a></li>
+					<li><a href="./day.html">保育について</a></li>
 					<li><a href="#">入園案内</a></li>
 					<li><a href="./access.html">アクセス</a></li>
-					<li><a href="#">お問い合わせ</a></li>
+					<li><a href="./contact.html">お問い合わせ</a></li>
 				</ul>
 			</div>
 		  <p class="copyright">&copy; MeiMei</p>
