--- a/day.html
+++ b/day.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>めいめいほいくえん</title>
+	<title>園について - めいめいほいくえん</title>
 	<!-- InstanceEndEditable -->
 	<meta name="Description" content="めいめいほいくえんのサイトです。">
 	<link href="img/icon.ico" rel="icon">
@@ -14,7 +14,7 @@
 <script src="js/jquery-3.7.1.slim.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- InstanceBeginEditable name="head" -->
-	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<link href="css/day.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 <body>
@@ -117,81 +117,67 @@
 	
 	<main>
 		<!-- InstanceBeginEditable name="main" -->
-		<section id="mainvisual">
-			<ul id="slider">
-				<li class="slider-item"><img src="img/mainvisual-1.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-2.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-3.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-4.jpg" alt="メインビジュアル"></li>
-			</ul>
-			<div class="kisya"><img src="img/mainvisual-img.png" alt="おとこのことおんなのこ"></div>
+		<section id="sub-title">
+			<h2 class="page-title">保育について</h2>
 		</section>
 		
-		<section id="message">
+		<section id="day">
 			<div class="container">
-				<p>めいめいほいくえんは<br>こどもたちの<br><span>「じぶんでやりたい」</span><br><span>「やってみたい」</span><br>という気持ちを大切にします</p>
+				<h3 class="sec-title">園での一日</h3>
+				<dl>
+					<dt>8:00</dt>
+					<dd>元気に登園！</dd>
+					<dt>9:00</dt>
+					<dd>朝の活動</dd>
+					<dt>10:00</dt>
+					<dd>お外遊び（運動、ボール遊び）</dd>
+					<dt>11:00</dt>
+					<dd>給食の準備</dd>
+					<dt>12:00</dt>
+					<dd>給食</dd>
+					<dt>13:00</dt>
+					<dd>おひるねの時間</dd>
+					<dt>14:00</dt>
+					<dd>室内遊び（粘土、お絵描き、体操）</dd>
+					<dt>15:00</dt>
+					<dd>おやつの時間</dd>
+					<dt>16:00</dt>
+					<dd>帰りの準備</dd>
+				</dl>
+				<ul>
+					<li><img src="img/day1.jpg" alt="園での一日"></li>
+					<li><img src="img/day2.jpg" alt="園での一日"></li>
+					<li><img src="img/day3.jpg" alt="園での一日"></li>
+					<li><img src="img/day4.jpg" alt="園での一日"></li>
+				</ul>
 			</div>
+			
 		</section>
 		
-		<section id="link">
+		<section id="season">
 			<div class="container">
+				<h3 class="sec-title">年間行事</h3>
 				<ul>
 					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">園について</p>
-						<p class="description">園の概要、目指す保育、園長先生からのメッセージ</p>
-						<a href="./about.html">詳しく見る</a>
+						<p class="title">春</p>
+						<p>入園式、お花見、親子遠足</p>
 					</li>
 					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">保育について</p>
-						<p class="description">園での一日、年間行事、食育</p>
-						<a href="./day.html">詳しく見る</a>
+						<p class="title">夏</p>
+						<p>七夕、プール開き、お泊り会、夏祭り</p>
 					</li>
 					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">入園案内</p>
-						<p class="description">説明会情報、募集要項、見学について</p>
-						<a href="#">詳しく見る</a>
+						<p class="title">秋</p>
+						<p>お月見、運動会、おいもほり</p>
 					</li>
 					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">アクセス</p>
-						<p class="description">最寄り駅からのルート、駐車場情報</p>
-						<a href="./access.html">詳しく見る</a>
+						<p class="title">冬</p>
+						<p>クリスマス会、お餅つき、ひなまつり、卒園式</p>
 					</li>
 				</ul>
 			</div>
 		</section>
 		
-		<section id="news">
-			<div class="container">
-				<h2>おしらせ</h2>
-				<ul class="news-lists">
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-1.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-2.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-3.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</section>
 		<!-- InstanceEndEditable -->
 	</main>
 
@@ -216,19 +202,7 @@
 	  </div>
 	
 	</footer>
-<!-- InstanceBeginEditable name="EditRegion4" -->
-	<script>
-		$('#slider').slick({
-			autoplay: true, //自動再生
-			fade: true,    // fedeオン
-			speed: 1500,   // 画像切り替えにかかる時間（ミリ秒）
-			autoplaySpeed: 3000, //自動再生の速度
-			arrows: false, //前へ・次への矢印ナビを表示
-			dots: false, //ドット型のナビを表示
-			infinite: true //無限ループ
-		});
-	</script>	
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- InstanceEndEditable -->
 <script>
 		//ハンバーガーボタン押下
 		$(".openbtn").click(function () {
