--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>めいめいほいくえん</title>
+	<title>お問い合わせ - めいめいほいくえん</title>
 	<!-- InstanceEndEditable -->
 	<meta name="Description" content="めいめいほいくえんのサイトです。">
 	<link href="img/icon.ico" rel="icon">
@@ -14,7 +14,7 @@
 <script src="js/jquery-3.7.1.slim.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- InstanceBeginEditable name="head" -->
-	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<link href="css/contact.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 <body>
@@ -117,79 +117,44 @@
 	
 	<main>
 		<!-- InstanceBeginEditable name="main" -->
-		<section id="mainvisual">
-			<ul id="slider">
-				<li class="slider-item"><img src="img/mainvisual-1.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-2.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-3.jpg" alt="メインビジュアル"></li>
-				<li class="slider-item"><img src="img/mainvisual-4.jpg" alt="メインビジュアル"></li>
-			</ul>
-			<div class="kisya"><img src="img/mainvisual-img.png" alt="おとこのことおんなのこ"></div>
+		<section id="sub-title">
+			<h2 class="page-title">お問い合わせ</h2>
 		</section>
-		
-		<section id="message">
+		<section id="phone">
 			<div class="container">
-				<p>めいめいほいくえんは<br>こどもたちの<br><span>「じぶんでやりたい」</span><br><span>「やってみたい」</span><br>という気持ちを大切にします</p>
+				<h3 class="sec-title">電話でのお問い合わせ</h3>
+				<p class="phone-number"><a href="tel:000-0000-0000">Tel: 000-0000-0000</a></p>
+				<p>お問い合わせ時間：平日10時～17時</p>
 			</div>
 		</section>
-		
-		<section id="link">
+		<section id="mail">
 			<div class="container">
-				<ul>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">園について</p>
-						<p class="description">園の概要、目指す保育、園長先生からのメッセージ</p>
-						<a href="./about.html">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">保育について</p>
-						<p class="description">園での一日、年間行事、食育</p>
-						<a href="./day.html">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">入園案内</p>
-						<p class="description">説明会情報、募集要項、見学について</p>
-						<a href="#">詳しく見る</a>
-					</li>
-					<li>
-						<img src="img/link-img.png" alt="男の子">
-						<p class="title">アクセス</p>
-						<p class="description">最寄り駅からのルート、駐車場情報</p>
-						<a href="./access.html">詳しく見る</a>
-					</li>
-				</ul>
-			</div>
-		</section>
-		
-		<section id="news">
-			<div class="container">
-				<h2>おしらせ</h2>
-				<ul class="news-lists">
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-1.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-2.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-					<li class="news-list">
-						<a href="#">
-							<div class="img"><img src="img/mainvisual-3.jpg" alt="お知らせ"></div>
-							<p class="title">園からのお知らせ</p>
-							<p class="date">2023.12.21</p>
-						</a>
-					</li>
-				</ul>
+				<h3 class="sec-title">メールでのお問い合わせ</h3>
+				<p>3日以内にメールが届かない場合、メール受信設定をご確認いただくか、お手数ですがお電話にてお問い合わせをお願いいたします。</p>
+				<form action="#" method="post">
+					<dl class="flex-box">
+						<dt class="flex-item"><label for="name"><span class="label-required">必須</span>お問い合わせ内容</label></dt>
+						<dd class="flex-item">
+							<select name="contact-type">
+									<option value="" selected="selected">
+									選択してください</option>
+									<option value="type1">
+									入園について</option>
+									<option value="type2">
+									見学について</option>
+									<option value="type3">
+									上記以外</option>
+							</select>
+						</dd>
+						<dt class="flex-item"><label for="name"><span class="label-required">必須</span>名前</label></dt>
+						<dd class="flex-item"><input type="text" id="name" name="your-name" placeholder="例）めいめい　はなこ"></dd>
+						<dt class="flex-item"><label for="email"><span class="label-required">必須</span>メールアドレス</label></dt>
+						<dd class="flex-item"><input type="email" id="email" name="your-email" placeholder="例）example@sample.com"></dd>
+						<dt class="flex-item"><label for="message"><span class="label-required">必須</span>メッセージ</label></dt>
+						<dd class="flex-item"><textarea id="message" name="your-message"></textarea></dd>
+					</dl>
+					<input class="btn" type="submit" value="確認画面へ">
+				</form>
 			</div>
 		</section>
 		<!-- InstanceEndEditable -->
@@ -217,18 +182,8 @@
 	
 	</footer>
 <!-- InstanceBeginEditable name="EditRegion4" -->
-	<script>
-		$('#slider').slick({
-			autoplay: true, //自動再生
-			fade: true,    // fedeオン
-			speed: 1500,   // 画像切り替えにかかる時間（ミリ秒）
-			autoplaySpeed: 3000, //自動再生の速度
-			arrows: false, //前へ・次への矢印ナビを表示
-			dots: false, //ドット型のナビを表示
-			infinite: true //無限ループ
-		});
-	</script>	
-<!-- InstanceEndEditable -->
+	
+	<!-- InstanceEndEditable -->
 <script>
 		//ハンバーガーボタン押下
 		$(".openbtn").click(function () {
