--- a/day.html
+++ b/day.html
@@ -161,20 +161,51 @@
 					<li>
 						<p class="title">春</p>
 						<p>入園式、お花見、親子遠足</p>
+						<div class="img"><img src="img/season1.png" alt="春の女の子"></div>
 					</li>
 					<li>
 						<p class="title">夏</p>
 						<p>七夕、プール開き、お泊り会、夏祭り</p>
+						<div class="img"><img src="img/season2.png" alt="夏の男の子"></div>
 					</li>
 					<li>
 						<p class="title">秋</p>
 						<p>お月見、運動会、おいもほり</p>
+						<div class="img"><img src="img/season3.png" alt="秋の女の子"></div>
 					</li>
 					<li>
 						<p class="title">冬</p>
 						<p>クリスマス会、お餅つき、ひなまつり、卒園式</p>
+						<div class="img"><img src="img/season4.png" alt="冬の男の子"></div>
 					</li>
 				</ul>
+			</div>
+		</section>
+		<section id="shokuiku">
+			<div class="container">
+				<h3 class="sec-title">食育</h3>
+				<dl>
+					<dt>給食だよりと献立表でご家庭へ情報提供！</dt>
+					<dd>毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。</dd>
+					<dt>食材にもこだわり！</dt>
+					<dd>給食に使用する食材は国産のものを選んでおります。</dd>
+					<dt>給食だよりと献立表でご家庭へ情報提供！</dt>
+					<dd>毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。</dd>
+					<dt>給食だよりと献立表でご家庭へ情報提供！</dt>
+					<dd>毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。</dd>
+					<dt>給食だよりと献立表でご家庭へ情報提供！</dt>
+					<dd>毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。</dd>
+					<dt>給食だよりと献立表でご家庭へ情報提供！</dt>
+					<dd>毎月給食便りと献立表を配布しております。献立表には食材の栄養素を表示し、ご家庭でも参考にしていただくように工夫しています。</dd>
+				</dl>
+	
+				<ul>
+					<li><img src="img/shokuiku1.jpg" alt="園での一日"></li>
+					<li><img src="img/shokuiku2.jpg" alt="園での一日"></li>
+					<li><img src="img/shokuiku3.jpg" alt="園での一日"></li>
+					<li><img src="img/shokuiku4.jpg" alt="園での一日"></li>
+				</ul>
+				
 			</div>
 		</section>
 		
