--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="./enter.html">
 							<dl>
 								<dt><img src="img/icon-nikukyu.png" alt="入園案内"></dt>
 								<dd>入園案内</dd>
@@ -88,7 +88,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="./enter.html">
 						<dl>
 							<dt><img src="img/icon-nikukyu.png" alt="入園案内"></dt>
 							<dd>入園案内</dd>
@@ -186,7 +186,7 @@
 					<li><a href="index.html">トップページ</a></li>
 					<li><a href="./about.html">園について</a></li>
 					<li><a href="./day.html">保育について</a></li>
-					<li><a href="#">入園案内</a></li>
+					<li><a href="./enter.html">入園案内</a></li>
 					<li><a href="./access.html">アクセス</a></li>
 					<li><a href="./contact.html">お問い合わせ</a></li>
 				</ul>
@@ -203,6 +203,9 @@
 			$("#sp-menu").toggleClass('active');
 		});
 		
+	function nolink(){
+		alert("この先のページは作成しておりません。");
+	}
 	
 		
 	</script>
