--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="./enter.html">
 							<dl>
 								<dt><img src="img/icon-nikukyu.png" alt="入園案内"></dt>
 								<dd>入園案内</dd>
@@ -88,7 +88,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="./enter.html">
 						<dl>
 							<dt><img src="img/icon-nikukyu.png" alt="入園案内"></dt>
 							<dd>入園案内</dd>
@@ -152,7 +152,7 @@
 						<img src="img/link-img.png" alt="男の子">
 						<p class="title">入園案内</p>
 						<p class="description">説明会情報、募集要項、見学について</p>
-						<a href="#">詳しく見る</a>
+						<a href="./enter.html">詳しく見る</a>
 					</li>
 					<li>
 						<img src="img/link-img.png" alt="男の子">
@@ -169,21 +169,21 @@
 				<h2>おしらせ</h2>
 				<ul class="news-lists">
 					<li class="news-list">
-						<a href="#">
+						<a href="javascript:nolink();">
 							<div class="img"><img src="img/mainvisual-1.jpg" alt="お知らせ"></div>
 							<p class="title">園からのお知らせ</p>
 							<p class="date">2023.12.21</p>
 						</a>
 					</li>
 					<li class="news-list">
-						<a href="#">
+						<a href="javascript:nolink();">
 							<div class="img"><img src="img/mainvisual-2.jpg" alt="お知らせ"></div>
 							<p class="title">園からのお知らせ</p>
 							<p class="date">2023.12.21</p>
 						</a>
 					</li>
 					<li class="news-list">
-						<a href="#">
+						<a href="javascript:nolink();">
 							<div class="img"><img src="img/mainvisual-3.jpg" alt="お知らせ"></div>
 							<p class="title">園からのお知らせ</p>
 							<p class="date">2023.12.21</p>
@@ -207,7 +207,7 @@
 					<li><a href="index.html">トップページ</a></li>
 					<li><a href="./about.html">園について</a></li>
 					<li><a href="./day.html">保育について</a></li>
-					<li><a href="#">入園案内</a></li>
+					<li><a href="./enter.html">入園案内</a></li>
 					<li><a href="./access.html">アクセス</a></li>
 					<li><a href="./contact.html">お問い合わせ</a></li>
 				</ul>
@@ -236,6 +236,9 @@
 			$("#sp-menu").toggleClass('active');
 		});
 		
+	function nolink(){
+		alert("この先のページは作成しておりません。");
+	}
 	
 		
 	</script>
